# Magnet

./: .gitignore  Cargo.toml  README.md  weights.rs
.github/workflows/: rust.yml
client/consensus/aura/: Cargo.toml
client/consensus/aura/src/: collator.rs  lib.rs
client/consensus/aura/src/collators/: mod.rs  on_demand.rs
client/coretime/bulk/: Cargo.toml
client/coretime/bulk/src/: lib.rs  metadata.rs
client/coretime/common/: Cargo.toml
client/coretime/common/src/: configuration.rs  lib.rs  types.rs
client/coretime/on-demand/: Cargo.toml
client/coretime/on-demand/src/: lib.rs  metadata.rs  submit_order.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  metadata.rs  metadata_1_1.rs  on_demand_order.rs  service.rs  submit_order.rs
node/src/rpc/: eth.rs  mod.rs
pallets/assets/: Cargo.toml
pallets/assets-bridge/: Cargo.toml  README.md
pallets/assets-bridge/src/: abi.rs  lib.rs  mock.rs  recover.rs  tests.rs
pallets/assets/src/: functions.rs  lib.rs  types.rs
pallets/assurance/: Cargo.toml  README.md
pallets/assurance/src/: lib.rs  mock.rs  tests.rs
pallets/bulk/: Cargo.toml
pallets/bulk/src/: benchmarking.rs  lib.rs  mock.rs  proof_data.rs  tests.rs  weights.rs
pallets/evm-utils/: Cargo.toml  README.md
pallets/evm-utils/src/: lib.rs  mock.rs  tests.rs
pallets/evm/precompile/substrate-utils/: Cargo.toml  README.md
pallets/evm/precompile/substrate-utils/src/: lib.rs  mock.rs  tests.rs
pallets/evm/precompile/transfer-to-magnet/: Cargo.toml  README.md
pallets/evm/precompile/transfer-to-magnet/contracts/: AssetsBridgeAdaptor.sol  AssetsBridgeErc20.sol  AssetsBridgeErc20_ByteCode.txt
pallets/evm/precompile/transfer-to-magnet/src/: lib.rs  mock.rs  tests.rs
pallets/liquidation/: Cargo.toml
pallets/liquidation/src/: lib.rs  mock.rs  tests.rs
pallets/motion/: Cargo.toml
pallets/motion/src/: tests.rs
pallets/move-vm/: Cargo.toml
pallets/move-vm/pallet/: build.rs
pallets/move-vm/pallet/src/: api.rs  balance.rs  benchmarking.rs  lib.rs  mock.rs  mock_utils.rs  result.rs  signer.rs  storage.rs  weights.rs
pallets/move-vm/pallet/src/tests/: address.rs  balance.rs  example.rs  execute.rs  gas_costs.rs  modules.rs  publish.rs  signer.rs  update_stdlib.rs
pallets/move-vm/rpc/src/: lib.rs
pallets/on-demand/: Cargo.toml
pallets/on-demand/src/: benchmarking.rs  lib.rs  mock.rs  proof_data.rs  tests.rs  weights.rs
pallets/order/: Cargo.toml
pallets/order/src/: benchmarking.rs  lib.rs  mock.rs  proof_data.rs  tests.rs  weights.rs
pallets/pallet-xcm/: Cargo.toml
pallets/pallet-xcm/src/: asset_transfer.rs  controller.rs  lib.rs  migration.rs  migrations.rs  mock.rs
pallets/pallet-xcm/src/tests/: assets_transfer.rs
pallets/pot/: Cargo.toml  README.md
pallets/pot/rpc/: Cargo.toml
pallets/pot/rpc/src/: lib.rs
pallets/pot/runtime-api/: Cargo.toml
pallets/pot/runtime-api/src/: lib.rs
pallets/pot/src/: lib.rs  mock.rs  tests.rs
pallets/preimage/: Cargo.toml
pallets/preimage/src/: lib.rs  migration.rs  mock.rs  preimages.rs  tests.rs
pallets/template/: Cargo.toml
primitives/chain-state-snapshot/: Cargo.toml
primitives/chain-state-snapshot/src/: lib.rs
primitives/coretime/bulk/: Cargo.toml
primitives/coretime/bulk/src/: inherent_client.rs  lib.rs  well_known_keys.rs
primitives/coretime/common/: Cargo.toml
primitives/coretime/common/src/: chain_state_snapshot.rs  lib.rs  well_known_keys.rs
primitives/coretime/on-demand/: Cargo.toml
primitives/coretime/on-demand/src/: inherent_client.rs  lib.rs  metadata.rs  well_known_keys.rs
primitives/order/: Cargo.toml
primitives/order/src/: inherent_client.rs  lib.rs  metadata.rs  metadata_1_1.rs  well_known_keys.rs
primitives/system/: Cargo.toml
primitives/system/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: contracts_config.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/src/governance/: fellowship.rs  mod.rs
runtime/src/weights/: mod.rs  pallet_assets.rs
runtime/src/xcms/: matches_token_ex.rs  mod.rs  xcm_weight.rs
